--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
     <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-      <span class="fs-4">Starter template</span>
+      <span class="fs-4">showcase</span>
     </a>
   </header>
 
   <main>
-    <h1 class="text-body-emphasis">Get started with Bootstrap</h1>
-    <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
+    <h1 class="text-body-emphasis">John Doe</h1>
+    <p class="fs-5">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
 
-    <div class="mb-5">
-      <a href="/docs/5.3/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
-    </div>
 
     <hr class="col-3 col-md-2 mb-5">
 
